--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -11,17 +11,31 @@ body {
 
 .title {
   background: #e3f4ff;
+  margin: 8px;
+  border-top: 8px solid #fff;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px;
+  padding: 8px 50px;
+  border-bottom: 8px solid #fff;
+  text-align: center;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin-left: 80px;
+  padding: 8px 24px;
 }
