--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -27,6 +27,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  display: flex;
+  align-items: center;
+  padding: 8px;
 }
 
 button {
@@ -45,4 +48,23 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-right {
+  display: flex;
+  gap: 16px;
+  margin: 8px;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  flex: 1;
+  flex-wrap: nowrap;
 }
