--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,29 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 32px;
+  text-align: center;
+}
+
+.text {
+  display: flex;
+}
+
+.item {
+  display: flex;
+  width: 200px;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-left: 52px;
+  margin-right: 52px;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
